updated petCard css to prevent pet name from flowing out of box (#119)
* updated petCard css to prevent pet name from flowing out of box

* preventing overflow on Pet name and shelter name for pet card

* readjusted .name to fix centering issue

--- a/frontend/src/styles/PetCard.css
+++ b/frontend/src/styles/PetCard.css
@@ -17,7 +17,7 @@
 
 .image {
     background-color: #5AD8CC;
-    margin: 1rem auto 2rem auto;
+    margin: 1rem auto 1rem auto;
     border-radius: .5rem;
     width: 80%;
     aspect-ratio: 1/1;
@@ -50,11 +50,16 @@
     border-color: #6b5b95;
     border-radius: 1rem;
     align-items: center;
+    justify-content: space-between;
 }
 
 .name {
-    margin: auto;
     justify-self: center;
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
+    overflow: hidden;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .fav {
@@ -66,6 +71,7 @@
     margin-right: .5rem;
     background: transparent;
     border: none;
+    padding-top: .25rem; 
 }
 
 .fav:hover {
@@ -103,4 +109,11 @@
     font-size: .75rem;
     margin-top: 0px;
     margin-bottom: 2rem;
+    justify-self: center;
+    text-overflow: ellipsis;
+    text-wrap: nowrap;
+    overflow: hidden;
+    padding: 0 2rem;
+    width: 75%;
+    text-align: center;
 }
